--- a/home/templates/home/snippet/mentor_action.html
+++ b/home/templates/home/snippet/mentor_action.html
@@ -56,6 +56,8 @@
 		<p class="card-text">
 		<a class="btn btn-primary" href="{% url 'communication-channels-edit' community_slug=project.project_round.community.slug project_slug=project.slug %}">Update Communication Channels</a>
 		</p>
+		<p class="card-text">
+		<a class="btn btn-warning" href="{% url 'project-action' community_slug=project.project_round.community.slug project_slug=project.slug action='withdraw' %}">Withdraw Project</a>
 		<hr>
 		<p class="card-text">You can <a href="{% url 'community-read-only' community_slug=project.project_round.community.slug %}">submit another project</a>
 			or <a href="{% url 'community-read-only' community_slug=project.project_round.community.slug %}">co-mentor another project</a>
