--- a/home/templates/home/round_page_with_communities.html
+++ b/home/templates/home/round_page_with_communities.html
@@ -7,7 +7,7 @@ Outreachy Internships | Apply | Pick a Project
 
 {% block content %}
 
-{% if not current_round.has_application_period_started and ontime_projects or closed_projects or mentors_pending_projects %}
+{% if not current_round.has_application_period_started and not current_round.has_late_application_deadline_passed and ontime_projects or closed_projects or mentors_pending_projects %}
 	{% include "home/snippet/round_not_open.html" %}
 {% endif %}
 
