Projects are 'unavailable' not 'hidden' to applicants until the application period opens
So hopefully they won't go pen-testing to find the hidden projects.

--- a/home/templates/home/snippet/eligibility_prompt.html
+++ b/home/templates/home/snippet/eligibility_prompt.html
@@ -4,7 +4,7 @@
 		<div class="card-body">
 			<p class="card-text">
 			The Outreachy applications are not open until {{ current_round.appsopen }} at 4pm UTC.
-			Information about projects are hidden from applicants until applications open.
+			Information about projects are unavailable until applications open.
 			</p>
 			<p class="card-text">
 			Please <a href="https://lists.outreachy.org/cgi-bin/mailman/listinfo/announce">sign up for the Outreachy announcements mailing list</a>
