--- a/home/templates/home/round_page_with_communities.html
+++ b/home/templates/home/round_page_with_communities.html
@@ -7,11 +7,18 @@ Outreachy Internships | Apply | Pick a Project
 
 {% block content %}
 
-{% if not current_round.has_application_period_started and not current_round.has_late_application_deadline_passed %}
-	{% include "home/snippet/round_not_open.html" %}
-{% endif %}
+{% comment %}Is the round not open yet, and this is a mentor or coordinator?{% endcomment %}
+{% with editable_projects=request.user.comrade.get_editable_mentored_projects approved_volunteer=request.user.comrade.approved_mentor_or_coordinator %}
+	{% if not current_round.has_application_period_started and not current_round.has_late_application_deadline_passed %}
+		{% if editable_projects or approved_volunteer %}
+			{% include "home/snippet/round_not_open.html" %}
+		{% endif %}
+	{% endif %}
 
-{% include "home/snippet/eligibility_prompts.html" %}
+	{% if not editable_projects and not approved_volunteer %}
+		{% include "home/snippet/eligibility_prompts.html" %}
+	{% endif %}
+{% endwith %}
 
 <p><a href="/apply/">Why apply to Outreachy?</a> &gt;
 {% if not request.user.comrade or request.user.comrade.needs_application %}
