--- a/outreachyhome/templates/base.html
+++ b/outreachyhome/templates/base.html
@@ -212,6 +212,7 @@
 					<div class="dropdown-menu" aria-labelledby="navbarAboutUs">
 						<a class="dropdown-item" href="/contact/">Contact Us</a>
 						<a class="dropdown-item" href="/promote/">Promote Outreachy</a>
+						<a class="dropdown-item" href="/blog/">Blog</a>
 					</div>
 				</li>
 			    {% if request.user.is_authenticated %}
