Include missing "hidden" fields in sponsor form
Without these fields we can get an error on form submit that looks like:

django.utils.datastructures.MultiValueDictKeyError: "'sponsorship_set-0-id'"

When editing an inline form that has an object that already exists, the
internal database primary key is included as a hidden field in the form
so that the server can remember that the newly-submitted values should
be saved into the existing object instead of creating a new object.

Fixes #222.

--- a/home/templates/home/preview/participation_action.html
+++ b/home/templates/home/preview/participation_action.html
@@ -80,6 +80,9 @@
 		{% with forloop.counter as sponsor_number %}
 		<h2>Sponsor #{{ sponsor_number }}</h2>
 		{{ f.media }}
+		{% for hidden in f.hidden_fields %}
+			{{ hidden }}
+		{% endfor %}
 		{% for field in f.visible_fields %}
 			{% if 'Funding secured' in field.label_tag %}
 				<div class="form-group card">
