--- a/home/templates/home/community_read_only.html
+++ b/home/templates/home/community_read_only.html
@@ -351,13 +351,21 @@ If you are an Outreachy applicant, you should look over the <a href="{% url 'pro
 		<p>Round participation information</p>
 		<ul>
 			<li>Number of interns funded: {{ participation_info.interns_funded }}</li>
+			<li>Funding details: {{ participation_info.intern_funding_details }}</li>
+			{% if community.newcommunity %}
+				<li>Community size: {{ community.newcommunity.get_community_size_display }}</li>
+				<li>Accepting public contributions for: {{ community.newcommunity.get_longevity_display }}</li>
+				<li>Organizations and companies participating: {{ community.newcommunity.participating_orgs }}</li>
+				<li>{% if community.newcommunity.approved_license %}Community licenses are approved.{% else %}WARNING: Community licenses are not approved. {{ community.newcommunity.unapproved_license_description }}{% endif %}</li>
+				<li>{% if community.newcommunity.no_proprietary_software %}Projects support free software only.{% else %}WARNING: Projects may support proprietary software. {{ community.newcommunity.proprietary_software_description }}{% endif %}</li>
+				<li>{% if community.newcommunity.approved_advertising %}Community does not advertise services of only one company.{% else %}WARNING: Community advertises services of only one company. {{ community.newcommunity.proprietary_software_description }}{% endif %}</li>
+				{% if community.newcommunity.goverance %}<li>Goverance: {{ community.newcommunity.goverance }}</li>{% endif %}
+				{% if community.newcommunity.code_of_conduct %}<li>Code of Conduct: {{ community.newcommunity.code_of_conduct }}</li>{% endif %}
+				{% if community.newcommunity.cla %}<li>Code Licensing Agreement: {{ community.newcommunity.cla }}</li>{% endif %}
+				{% if community.newcommunity.dco %}<li>Developer Certificate of Origin: {{ community.newcommunity.dco }}</li>{% endif %}
+			{% endif %}
+			<li><a href="{% url 'community-landing' round_slug=current_round.slug slug=community.slug %}">Community landing page</a></li>
 		</ul>
-		<div class="card">
-			<div class="card-header">Preview - Community Information for Applicants</div>
-			<div class="card-body">
-			{% include "home/snippet/community_landing_snippet.html" %}
-			</div>
-		</div>
 		{% if participation_info.approval_status != participation_info.APPROVED and not current_round.has_project_submission_and_approval_deadline_passed %}
 			<a href="{{ participation_info.get_approve_url }}" class="btn btn-success">Approve Community</a>
 		{% endif %}
