--- a/home/templates/home/round_page_with_communities.html
+++ b/home/templates/home/round_page_with_communities.html
@@ -58,7 +58,7 @@ Outreachy Internships | Apply | Pick a Project
 </p>
 
 {% if previous_round and not current_round.has_application_period_started %}
-	<p>You may want to brush up on your skills for contributing to free and open source software communities. Each project will use a different set of skills. Sometimes the project mentors are willing to teach you skills. Projects and the skills they use change each round. The most common skills used in projects last round were:
+	<p>You may want to brush up on your skills for contributing to free and open source software communities. Each project will use a different set of skills, and some mentors may be willing to teach you skills. Projects and the skills they use change each round. The most common skills used in projects last round were:
 	<ul>
 		{% for common_skill in previous_round.get_common_skills %}
 		{% if common_skill.1 > 2 %}<li>{{ common_skill.0 }} - {{ common_skill.1 }} project{{ common_skill.1|pluralize }}</li>{% endif %}
